--- a/tests/Payments.IntegrationTests/Payments.IntegrationTests/Payments.IntegrationTests.csproj
+++ b/tests/Payments.IntegrationTests/Payments.IntegrationTests/Payments.IntegrationTests.csproj
@@ -9,18 +9,18 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\PaymentsService\PaymentsService\PaymentsService.csproj" />
-    <ProjectReference Include="..\..\src\PaymentsService\PaymentsService\PaymentsService.csproj" />
-    <ProjectReference Include="..\..\src\Contracts\Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\..\..\src\Contracts\Contracts\Contracts.csproj" />
   </ItemGroup>
 
+
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="xunit" Version="2.9.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.9" />
-    <PackageReference Include="MassTransit.Testing" Version="8.5.7" />
-    <PackageReference Include="Testcontainers.PostgreSql" Version="4.9.0" />
-    <PackageReference Include="FluentAssertions" Version="6.12.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="xunit" />
+    <PackageReference Include="xunit.runner.visualstudio" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
+    <PackageReference Include="MassTransit.Testing" />
+    <PackageReference Include="Testcontainers.PostgreSql" />
+    <PackageReference Include="FluentAssertions" />
   </ItemGroup>
 
 </Project>
