--- a/tests/Orders.IntegrationTests/Orders.IntegrationTests/Orders.IntegrationTests.csproj
+++ b/tests/Orders.IntegrationTests/Orders.IntegrationTests/Orders.IntegrationTests.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
-    <PackageReference Include="MassTransit.Testing" />
+    <PackageReference Include="MassTransit.Testing" Version="8.5.7" />
     <PackageReference Include="Testcontainers.PostgreSql" />
     <PackageReference Include="FluentAssertions" />
   </ItemGroup>
