--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -192,22 +192,25 @@ services:
       dockerfile: src/Frontend/Dockerfile
     depends_on:
       api-gateway:
-        condition: service_healthy
+        condition: service_started
     networks: [appnet]
     ports:
       - "8083:80"
     restart: on-failure:5
     healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost/ >/dev/null 2>&1 || exit 1"]
-      interval: 10s
+      # проверяем стабильный эндпоинт, а не /
+      test: ["CMD-SHELL", "wget -qO- http://localhost/health >/dev/null 2>&1 || exit 1"]
+      interval: 5s
       timeout: 3s
       retries: 30
-      start_period: 10s
+      # даём nginx спокойно подняться на CI
+      start_period: 20s
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
+
 
 networks:
   appnet:
